[gd_scene load_steps=14 format=3 uid="uid://boh45t802s31y"]

[ext_resource type="Texture2D" uid="uid://b7wpjfd4cew7a" path="res://assets/img/button-cap.png" id="1"]
[ext_resource type="Texture2D" uid="uid://gk282uctuakd" path="res://assets/img/button-base-front.png" id="2"]
[ext_resource type="Texture2D" uid="uid://b6564odjppqjq" path="res://assets/img/button-stick.png" id="3"]
[ext_resource type="Texture2D" uid="uid://5armtupjyhle" path="res://assets/img/button-base.png" id="4"]
[ext_resource type="Script" uid="uid://cixshpxbl1cvh" path="res://scenes/item/buzzer/Buzzer.gd" id="5"]
[ext_resource type="AudioStream" uid="uid://dr6ga82qojp4f" path="res://assets/sound/buzz-ok.mp3" id="6"]
[ext_resource type="AudioStream" uid="uid://dh73167h8sto8" path="res://assets/sound/buzz-error.mp3" id="7"]
[ext_resource type="Texture2D" uid="uid://dkasvbd7rd1g4" path="res://assets/img/led-on.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bhkua11dcwfc0" path="res://assets/img/led-off.png" id="9"]

[sub_resource type="CanvasItemMaterial" id="1"]
blend_mode = 1

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Button-base/Button-cap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -140)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Button-base/Button-stick:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -80)]
}

[sub_resource type="Animation" id="3"]
resource_name = "press"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Button-base/Button-stick:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -80), Vector2(0, -40), Vector2(0, -80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Button-base/Button-cap:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -140), Vector2(0, -100), Vector2(0, -140)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ve0c"]
_data = {
&"RESET": SubResource("2"),
&"press": SubResource("3")
}

[node name="Buzzer" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("5")

[node name="Physics" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-1, 155, -182, 47, -184, -42, -122, -77, 124, -85, 182, -50, 182, 44)
disabled = true

[node name="Base" type="Area2D" parent="."]

[node name="Base" type="CollisionPolygon2D" parent="Base"]
polygon = PackedVector2Array(1, 150, -180, 47, -178, -45, -1, -152, 178, -48, 181, 46)

[node name="Click" type="Area2D" parent="."]
collision_layer = 3

[node name="Cap" type="CollisionPolygon2D" parent="Click"]
polygon = PackedVector2Array(23, -42, -71, -50, -133, -86, -149, -140, -114, -202, -65, -228, 19, -240, 94, -218, 132, -174, 149, -117, 105, -66)

[node name="Stick" type="CollisionPolygon2D" parent="Click"]
polygon = PackedVector2Array(38, -58, -2, -50, -35, -60, -36, -130, -36, -160, -24, -174, 0, -182, 20, -175, 34, -164, 38, -147, 36, -130)

[node name="Pivot" type="Node2D" parent="."]

[node name="Button-base" type="Sprite2D" parent="Pivot"]
texture = ExtResource("4")

[node name="Button-stick" type="Sprite2D" parent="Pivot/Button-base"]
position = Vector2(0, -80)
texture = ExtResource("3")

[node name="Button-base-front" type="Sprite2D" parent="Pivot/Button-base"]
texture = ExtResource("2")

[node name="Led" type="Node2D" parent="Pivot/Button-base/Button-base-front"]
unique_name_in_owner = true
position = Vector2(-133, -47)

[node name="Led-on" type="Sprite2D" parent="Pivot/Button-base/Button-base-front/Led"]
visible = false
texture = ExtResource("8")

[node name="Led-off" type="Sprite2D" parent="Pivot/Button-base/Button-base-front/Led"]
texture = ExtResource("9")

[node name="Button-cap" type="Sprite2D" parent="Pivot/Button-base"]
position = Vector2(0, -140)
texture = ExtResource("1")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Pivot/Button-base/Button-cap"]
remote_path = NodePath("../../../../Light3D")

[node name="Light3D" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
material = SubResource("1")
position = Vector2(0, -140)
texture = ExtResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4ve0c")
}

[node name="Good" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")

[connection signal="input_event" from="Base" to="." method="_on_Base_input_event"]
[connection signal="body_entered" from="Click" to="." method="_on_Click_body_entered"]
[connection signal="input_event" from="Click" to="." method="_on_Click_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
